#623 Fix alignment in overlay mode.

--- a/src/stylesheets/components/esper/_error.scss
+++ b/src/stylesheets/components/esper/_error.scss
@@ -14,7 +14,7 @@
     display: none;
   }
 
-  .overlay-mode & {
+  .panel-visible.overlay-mode & {
     padding-top: $toolbar-height;
   }
 
